# poo2_pc3_2021_0_template

./: CMakeLists.txt  README.md  cppcheck.cpp  generate_zip.sh  global.h  p1.cpp  p1.h  run.sh  test_1_1.cpp  test_1_1.in  test_1_2.cpp  test_1_3.cpp  test_1_4.cpp
